# XFEL-ANN

./: .gitignore  README.md  _config.yml  baseline.py  corr_analysis.py  delay_est.py  delay_prep.py  emean_prep.py  estimator.py  feature_selection.py  hp_tuning.py  index.md  model_fit.py  mystyle-2.mplstyle  plot_pred.py  prep_utils.py  pyproject.toml  setup.py
Data/Delays/: inp_ref.pkl  out_ref.pkl
Data/EMean/: inp_ref.pkl  out_ref.pkl
Data/NewDelays/: inp_ref.pkl  out_ref.pkl
Scripts/: delay.sh  emean.sh  hp_delay.sh  hp_emean.sh  new_delay.sh
