[tool.poetry]
name = "xfel-ann"
version = "0.1.0"
description = ""
authors = ["Karim <karim.alaael-din@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.3"
scipy = "^1.6.0"
pandas = "^1.2.1"
six = "1.15.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
